k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: clock-app
  labels:
    app: clock-app
spec:
  selector:
    app: clock-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
